syntax = "proto3";

package order;

option go_package = "./proto";

service OrderService {
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {}
  rpc CreateOrder (CreateOrderRequest) returns (Order) {}
}

message CreateOrderRequest {
  int64 customer_id = 1;
  double amount = 2;
  string status = 3;
}

message Order {
  int64 id = 1;
  int64 customer_id = 2;
  double amount = 3;
  string status = 4;
  string created_at = 5;
}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}
